--- a/web/index.zul
+++ b/web/index.zul
@@ -1,23 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<!--
-index.zul
-
-{{IS_NOTE
-	Purpose:
-		
-	Description:
-		
-	History:
-		Mon Jun 12 21:23:35     2006, Created by tomyeh
-		Fri May 01 04:36:35     2009, Modified by stera
-}}IS_NOTE
-
-Copyright (C) 2006 Potix Corporation. All Rights Reserved.
-
-{{IS_RIGHT
-}}IS_RIGHT
--->
 <zk xmlns="http://www.zkoss.org/2005/zul" xmlns:n="native">
     <style>
         .cg-title {
@@ -44,8 +25,12 @@ Copyright (C) 2006 Potix Corporation. All Rights Reserved.
         }        
     </style>
     <div width="100%">
+        <window title="ZK Framework Demo Application" 
+                apply="com.edhkle.zkrx.ZkrxController"
+                id="win"
+                viewModel="@id('vm') @init('com.edhkle.zkrx.PillsVM')">
         <groupbox width="93%">
-            <caption label="ZkRx Demo Application"/>
+            <caption label="ZkRx"/>
             <hlayout spacing="30px" style="padding-left: 10px;">
                 <image src="images/white_pill.jpg"/>
                 <n:h1 class="cg-title">Pill Identifier</n:h1>
@@ -56,34 +41,36 @@ Copyright (C) 2006 Potix Corporation. All Rights Reserved.
                     <caption image="images/pill.png" label="Description"/>
                     <hlayout spacing="30px" style="padding-bottom: 10px;">
                         <label value="Imprint"/>
-                        <textbox value="" width="120px"/>
-                        <radiogroup Id="rdoConjunction" onCheck="">
-		      			<radio label="AND"/>
-                                        <radio label="OR" checked="true"/>
+                        <textbox id="imprint" value="" width="120px"/>
+                        <radiogroup Id="andOr" onCheck="">
+		      			<radio value="AND" label="AND"/>
+                                        <radio value="OR" label="OR" checked="true"/>
 		       </radiogroup>
                         <label value="Description"/>
-                        <hbox spacing="5px" pack="center" align="end"><textbox value="" width="240px"/></hbox>
+                        <textbox id="description" value="" width="240px"/>
+                        <button id="search" label="Search"/>
                     </hlayout>
-                    <hbox spacing="30px" style="align: end;">
-                        <label width="100%"/>
-                        <button label="Search" onClick=""></button>
-                    </hbox>
                 </groupbox>
                 <groupbox mold="default" width="100%">
                     <caption image="images/pills-3-32.png" label="Results"/>
                     <listbox id="listResults" width="100%" height="100%"
-                             onSelect="">
+                             emptyMessage="No results available"
+                             model="@bind(vm.pills)" 
+                             selectedItem="@bind(vm.selectedPill)">
                         <listhead>
                             <listheader width="200px" label="Image"/>
                             <listheader label="Description"/>
                         </listhead>
-                        <listitem>
-                            <listcell label="No image available"/>
-                            <listcell label="No Result"/>
-                        </listitem>
+                        <template name="model" var="p">                        
+                            <listitem value="@bind(p.setId)">
+                                <listcell image="@bind(p.imagePath)"/>
+                                <listcell label="@bind(p.medicineName)"/>
+                            </listitem>
+                        </template>
                     </listbox>
                 </groupbox>
             </vlayout>
         </groupbox>
+        </window>
     </div>
 </zk>
